# furious

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md
src/: CMakeLists.txt  bitset_test.cpp  components.h  furious.c  furious.cpp  furious.h  furious.inl  furious_macros.h  furious_runtime.cpp  furious_runtime.h  furious_test.cpp  lang_test.cpp  lang_test.h  mvp_test.cpp
src/common/: CMakeLists.txt  atomic_counter.c  atomic_counter.h  bitmap.c  bitmap.cpp  bitmap.h  bitmap.inl  btree.c  btree.cpp  btree.h  btree.inl  common.h  dyn_array.h  dyn_array.inl  hash_dict.h  hash_dict.inl  hash_map.h  hash_map.inl  hashtable.c  hashtable.cpp  hashtable.h  mutex.c  mutex.cpp  mutex.h  optional.h  platform.c  platform.cpp  platform.h  refcount_ptr.h  refcount_ptr.inl  reference.h  reflection.h  set.cpp  set.h  str_builder.c  str_builder.cpp  str_builder.h  string_builder.cpp  string_builder.h  thread.c  (+6 more)
src/common/deprecated/: btree.h  btree.inl  refcount_ptr.h  refcount_ptr.inl
src/common/impl/: btree_impl.cpp  btree_impl.h
src/common/memory/: memory.c  memory.cpp  memory.h  numa_alloc.c  numa_alloc.cpp  numa_alloc.h  page_allocator.c  page_allocator.h  pool_allocator.c  pool_allocator.h  stack_allocator.c  stack_allocator.h
src/common/templates/: array.cpp.in  array.h.in
src/compiler/: CMakeLists.txt  clang_tools.cpp  clang_tools.h  codegen.cpp  codegen.h  driver.h  dyn_array.h  dyn_array.inl  exec_plan_printer.cpp  exec_plan_printer.h  execution_plan.cpp  execution_plan.h  execution_plan.inl  fcc.cpp  fccASTVisitor.cpp  fccASTVisitor.h  fcc_context.cpp  fcc_context.h  parsing.cpp  parsing.h  structs.cpp  structs.h  transforms.cpp  transforms.h
src/compiler/backend/: codegen.cpp  codegen.h  codegen_tools.cpp  codegen_tools.h  consume_visitor.cpp  consume_visitor.h  consumer.cpp  consumer.h  produce_visitor.cpp  produce_visitor.h  producer.cpp  producer.h  reflection.cpp  reflection.h
src/compiler/drivers/clang/: ast_visitor.cpp  ast_visitor.h  clang.cpp  clang.h  clang_parsing.cpp  clang_parsing.h  clang_reflection.cpp  clang_tools.cpp  clang_tools.h
src/compiler/frontend/: dep_graph.cpp  dep_graph.h  exec_plan.cpp  exec_plan.h  exec_plan_printer.cpp  exec_plan_printer.h  execution_plan.cpp  execution_plan.h  execution_plan.inl  fccASTVisitor.cpp  fccASTVisitor.h  operator.cpp  operator.h  operator.inl  parsing.cpp  parsing.h  transforms.cpp  transforms.h
src/data/: .physical_plan_generator.h.swp  CMakeLists.txt  bitset.h  btree.h  common.h  context.h  context.inl  data.h  database.cpp  database.h  database.inl  entity.cpp  entity.h  entity.inl  table.cpp  table.h  table.inl  table_view.h  table_view.inl
src/data/impl/: btree_impl.cpp  btree_impl.h
src/lang/: lang.h  macros.h
src/memory/: CMakeLists.txt  numa_alloc.cpp  numa_alloc.h
src/runtime/: CMakeLists.txt  backend.h  execution_engine.cpp  execution_engine.h  execution_plan.cpp  execution_plan.h  physical_plan_generator.cpp  physical_plan_generator.h  runtime.h  static_system.h  static_system.inl  system.cpp  system.h  system_wrapper.h  system_wrapper.inl  workload.cpp  workload.h  workload.inl
src/runtime/backends/basic/: basic.cpp  basic.h
src/runtime/backends/volcano/: temp_buffer.cpp  temp_buffer.h  volcano.cpp  volcano.h
src/runtime/data/: CMakeLists.txt  bit_table.cpp  bit_table.h  bittable.c  bittable.h  block_cluster.c  block_cluster.cpp  block_cluster.h  btree.h  btree.inl  common.h  context.c  context.cpp  context.h  context.inl  data.h  data_utils.c  data_utils.cpp  data_utils.h  data_utils.inl  database.c  database.cpp  database.h  database.inl  entity.cpp  entity.h  entity.inl  ht_registry.c  ht_registry.cpp  ht_registry.h  macros.h  reflection.c  reflection.cpp  reflection.h  reftable.c  table.c  table.cpp  table.h  table.inl  table_utils.h  (+16 more)
src/runtime/data/deprecated/: bittable.c  bittable.h  entity.cpp  entity.inl  reftable.h  table.h  table_view.inl
src/runtime/data/impl/: btree_impl.cpp  (+1 more)
src/runtime/log/: log.c  log.cpp  log.h
src/runtime/logic/: logic_filter.cpp  logic_filter.h  logic_join.cpp  logic_join.h  logic_map.cpp  logic_map.h  logic_plan.h  logic_plan_visitor.h  logic_scan.cpp  logic_scan.h
src/runtime/memory/: allocator.h  linear_allocator.cpp  linear_allocator.h  memory.cpp  memory.h  numa_alloc.cpp  numa_alloc.h  pool_allocator.cpp  pool_allocator.h  stack_allocator.cpp  stack_allocator.h
src/runtime/operators/: foreach.h  join.h  operators.h  utils.h
src/runtime/physical/: physical_filter.cpp  physical_filter.h  physical_hash_join.cpp  physical_hash_join.h  physical_map.cpp  physical_map.h  physical_plan.h  physical_scan.cpp  physical_scan.h
src/runtime/task/: task.c  task.cpp  task.h
src/test/: CMakeLists.txt  btree_test.cpp  data_test.h  database_test.cpp  execution_engine_test.cpp  foreach_test.cpp  memory_test.cpp  physical_filter_test.cpp  physical_hash_join_test.cpp  physical_map_test.cpp  physical_plan_generator_test.cpp  physical_scan_test.cpp  reflection_test.cpp  system_test.cpp  table_test.cpp  tags_test.cpp  traits_test.cpp
src/test/compiler/: CMakeLists.txt  basic_test.cpp  basic_test_header.h  basic_test_script.cpp  dependency_test.cpp  dependency_test_header.h  dependency_test_script.cpp  expand_test.cpp  expand_test_header.h  expand_test_script.cpp  filter_func_test.cpp  filter_func_test_header.h  filter_func_test_script.cpp  filter_lambda_test.cpp  filter_lambda_test_header.h  filter_lambda_test_script.cpp  filter_tag_test.cpp  filter_tag_test_header.h  filter_tag_test_script.cpp  global_test.cpp  global_test_header.h  global_test_script.cpp  reflection_test.cpp  reflection_test_header.h  reflection_test_script.cpp
src/test/runtime/: CMakeLists.txt  bitmap_test.cpp  bittable_test.cpp  blockcluster_test.cpp  btree_test.cpp  database_test.cpp  dyn_array_test.cpp  hashtable_test.cpp  linear_alloc_test.cpp  memory_test.cpp  page_alloc_test.cpp  pool_alloc_test.cpp  refs_test.cpp  stack_alloc_test.cpp  table_test.cpp  tags_test.cpp  traits_test.cpp  txbitmap_test.cpp  txbtree_test.cpp  txpool_alloc_test.cpp  txtable_test.cpp
(+13 files in other folders)
