CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT( furious )

set( CMAKE_EXPORT_COMPILE_COMMANDS 1 )

if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
  message(STATUS "Setting build type to 'RELEASE' as none was specified.")
  set(CMAKE_BUILD_TYPE RELEASE)
endif()

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules/;${CMAKE_MODULE_PATH}")

## Checking for required packages

find_package(LibClang REQUIRED)

if(NOT LIBCLANG_FOUND)
  message(FATAL_ERROR "LibClang could not be found")
endif()

set(CLANG_INCLUDES_DIR "${LIBCLANG_LIBDIR}/clang/${LIBCLANG_VERSION_STRING}/include")
#
#if(NOT CLANG_INCLUDES_DIR)
#  message(FATAL_ERROR "Need to define folder with clang includes")
#endif()

#set(CMAKE_INSTALL_PREFIX ${FURIOUS_INSTALL_PREFIX})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)


IF(FDB_ENABLE_ASSERTS)
  set(DEFAULT_DEFINES ${DEFAULT_DEFINES} -DFDB_ENABLE_ASSERTS) 
ENDIF(FDB_ENABLE_ASSERTS)

add_definitions(${DEFAULT_DEFINES})
set(CMAKE_CXX_FLAGS 
  "${CMAKE_CXX_FLAGS} \
  -std=c++11 \
  -Wall \
  -fno-rtti \
  -fno-exceptions \
  -fstrict-aliasing \
  -Wstrict-aliasing")

set(CMAKE_C_FLAGS 
  "${CMAKE_C_FLAGS} \
  -std=c99 \
  -Wall \
  -fstrict-aliasing")

set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -pg -ggdb")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -pg -ggdb")
#set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -g -pg -DNDEBUG -ftree-vectorize -ftree-vectorizer-verbose=7 -fopt-info-vec-all -fno-devirtualize ")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O3 -ggdb")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -ggdb")

set(FURIOUS_DEFAULT_DEFINES 
  ${DEFAULT_DEFINES}
  "-DFDB_ENABLE_ASSERTS"
  "-DFDB_DEBUG")

IF(UNIX)
  set(FURIOUS_DEFAULT_DEFINES 
    ${FURIOUS_DEFAULT_DEFINES}
    "-DFDB_OS_LINUX"
    "-DFDB_COMPILER_GCC")
ENDIF(UNIX)

IF( WIN32 )
ENDIF(WIN32)

add_definitions(${FURIOUS_DEFAULT_DEFINES})
set(FURIOUS_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(FURIOUS_OUTPUT_DIR "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/furious")

enable_testing()

message(STATUS "BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
message(STATUS "LIBCLANG: ${LIBCLANG_VERSION_STRING}")
message(STATUS "LIBCLANG INCLUDES DIR: ${CLANG_INCLUDES_DIR}")
message(STATUS "DEFINES: ${DEFAULT_DEFINES}")

add_subdirectory(src)

